--- a/swak-sample-vertx/pom.xml
+++ b/swak-sample-vertx/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -87,18 +88,9 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
-				<groupId>com.swak</groupId>
-				<artifactId>swak-api</artifactId>
-				<version>${project.version}</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>ApiGenerate</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+			<!-- 目前不支持jdk13 <plugin> <groupId>com.swak</groupId> <artifactId>swak-api</artifactId> 
+				<version>${project.version}</version> <executions> <execution> <goals> <goal>ApiGenerate</goal> 
+				</goals> </execution> </executions> </plugin> -->
 		</plugins>
 	</build>
 </project>
