--- a/pom.xml
+++ b/pom.xml
@@ -360,6 +360,7 @@
 					<include>**/*.factories</include>
 					<include>**/*.db</include>
 					<include>**/*.jceks</include>
+					<include>**/*.jav</include>
 				</includes>
 				<filtering>false</filtering>
 			</resource>
