--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
 		<maven.version>3.5.4</maven.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.version>${project.version}</project.version>
+
+		<!-- plugin setting -->
+        <lombok-maven-plugin>1.18.10.0</lombok-maven-plugin>
+        <maven-compiler-plugin>3.8.1</maven-compiler-plugin>
+		<maven-surefire-plugin>3.0.0-M4</maven-surefire-plugin>
+		<maven-source-plugin>3.2.0</maven-source-plugin>
+		<build-helper-maven-plugin>3.1.0</build-helper-maven-plugin>
 	</properties>
 	<repositories>
 		<repository>
@@ -286,7 +293,7 @@
 			<plugin>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok-maven-plugin</artifactId>
-				<version>1.18.10.0</version>
+				<version>${lombok-maven-plugin}</version>
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
@@ -299,7 +306,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>${maven-compiler-plugin}</version>
 				<configuration>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
@@ -313,7 +320,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M4</version>
+				<version>${maven-surefire-plugin}</version>
 				<configuration>
 					<skipTests>true</skipTests>
 				</configuration>
@@ -321,7 +328,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.2.0</version>
+				<version>${maven-source-plugin}</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
