--- a/swak-sample-api/pom.xml
+++ b/swak-sample-api/pom.xml
@@ -28,6 +28,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>${build-helper-maven-plugin}</version>
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
