--- a/pom.xml
+++ b/pom.xml
@@ -45,55 +45,55 @@
 		<module>swak-generate</module>
 	</modules>
 	<properties>
-		<spring-boot.version>2.2.2.RELEASE</spring-boot.version>
-		<spring.version>5.2.2.RELEASE</spring.version>
+		<spring-boot.version>2.2.6.RELEASE</spring-boot.version>
+		<spring.version>5.2.5.RELEASE</spring.version>
 		<cglib.version>3.3.0</cglib.version>
-		<javassist.version>3.26.0-GA</javassist.version>
-		<fastjson.version>1.2.62</fastjson.version>
+		<javassist.version>3.27.0-GA</javassist.version>
+		<fastjson.version>1.2.68</fastjson.version>
 		<logback.version>1.2.3</logback.version>
-		<slf4j.version>1.7.28</slf4j.version>
-		<netty.version>4.1.44.Final</netty.version>
-		<reactor.version>3.3.1.RELEASE</reactor.version>
-		<micrometer.version>1.1.3</micrometer.version>
-		<HdrHistogram.version>2.1.10</HdrHistogram.version>
-		<ehcache.version>3.6.3</ehcache.version>
-		<lettuce.version>5.2.1.RELEASE</lettuce.version>
+		<slf4j.version>1.7.30</slf4j.version>
+		<netty.version>4.1.48.Final</netty.version>
+		<reactor.version>3.3.4.RELEASE</reactor.version>
+		<micrometer.version>1.4.1</micrometer.version>
+		<HdrHistogram.version>2.1.12</HdrHistogram.version>
+		<ehcache.version>3.8.1</ehcache.version>
+		<lettuce.version>5.2.2.RELEASE</lettuce.version>
 		<kryo.version>4.0.2</kryo.version>
-		<kotlin.version>1.3.61</kotlin.version>
-		<kotlin.coroutines.version>1.3.3</kotlin.coroutines.version>
-		<groovy.version>2.5.8</groovy.version>
-		<mybatis.version>3.5.3</mybatis.version>
-		<mybatis-spring.version>2.0.3</mybatis-spring.version>
-		<druid.version>1.1.19</druid.version>
-		<HikariCP.version>3.4.1</HikariCP.version>
-		<async.httpclient.version>2.10.4</async.httpclient.version>
-		<motan.version>1.1.6</motan.version>
-		<vertx.version>3.8.5</vertx.version>
+		<kotlin.version>1.3.71</kotlin.version>
+		<kotlin.coroutines.version>1.3.5</kotlin.coroutines.version>
+		<groovy.version>3.0.2</groovy.version>
+		<mybatis.version>3.5.4</mybatis.version>
+		<mybatis-spring.version>2.0.4</mybatis-spring.version>
+		<druid.version>1.1.21</druid.version>
+		<HikariCP.version>3.4.2</HikariCP.version>
+		<async.httpclient.version>2.11.0</async.httpclient.version>
+		<motan.version>1.1.8</motan.version>
+		<vertx.version>4.0.0-milestone4</vertx.version>
 		<qrcode.version>3.4.0</qrcode.version>
-		<javapoet.version>1.11.1</javapoet.version>
-		<zookeeper.version>3.4.8</zookeeper.version>
+		<javapoet.version>1.12.1</javapoet.version>
+		<zookeeper.version>3.6.0</zookeeper.version>
 		<zkclient.version>0.11</zkclient.version>
-		<metrics.version>4.1.0</metrics.version>
-		<quartz.version>2.2.3</quartz.version>
+		<metrics.version>4.1.5</metrics.version>
+		<quartz.version>2.3.2</quartz.version>
 		<jcef.version>1.0</jcef.version>
-		<poi.version>4.0.1</poi.version>
+		<poi.version>4.1.2</poi.version>
 		<guava.version>21.0</guava.version>
-		<controlsfx.version>8.40.14</controlsfx.version>
-		<freemarker.version>2.3.29</freemarker.version>
-		<rabbitmq.version>5.7.3</rabbitmq.version>
-		<rocketmq.version>4.5.1</rocketmq.version>
+		<controlsfx.version>8.40.16</controlsfx.version>
+		<freemarker.version>2.3.30</freemarker.version>
+		<rabbitmq.version>5.8.0</rabbitmq.version>
+		<rocketmq.version>4.7.0</rocketmq.version>
 		<lombok.version>1.18.12</lombok.version>
 
 		<!-- test -->
-		<junit.version>4.12</junit.version>
+		<junit.version>4.13</junit.version>
 
 		<!-- db driver -->
 		<sharding.version>3.0.0</sharding.version>
-		<mysql-jdbc.version>5.1.47</mysql-jdbc.version>
-		<h2-jdbc.version>1.4.197</h2-jdbc.version>
-		<sqlite-jdbc.version>3.25.2</sqlite-jdbc.version>
-		<mongodb.version>3.12.0</mongodb.version>
-		<jasync.version>1.0.13</jasync.version>
+		<mysql-jdbc.version>8.0.19</mysql-jdbc.version>
+		<h2-jdbc.version>1.4.200</h2-jdbc.version>
+		<sqlite-jdbc.version>3.30.1</sqlite-jdbc.version>
+		<mongodb.version>3.12.2</mongodb.version>
+		<jasync.version>1.0.14</jasync.version>
 
 		<!-- other setting -->
 		<jdk.version>1.8</jdk.version>
