--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
 		<HikariCP.version>3.4.2</HikariCP.version>
 		<async.httpclient.version>2.11.0</async.httpclient.version>
 		<motan.version>1.1.8</motan.version>
-		<vertx.version>4.0.0-milestone4</vertx.version>
+		<vertx.version>3.9.0</vertx.version>
 		<qrcode.version>3.4.0</qrcode.version>
 		<javapoet.version>1.12.1</javapoet.version>
 		<zookeeper.version>3.6.0</zookeeper.version>
