maven插件，java processor 项目编译问题

--- a/swak-api/pom.xml
+++ b/swak-api/pom.xml
@@ -86,6 +86,9 @@
 							<goal>descriptor</goal>
 						</goals>
 						<phase>generate-resources</phase>
+						<configuration>
+							<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
