maven插件，java processor 项目编译问题

--- a/swak-sample/pom.xml
+++ b/swak-sample/pom.xml
@@ -96,7 +96,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.sample.AppRunner</mainClass>
+                            <mainClass>com.tmt.AppRunner</mainClass>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib</classpathPrefix>
                         </manifest>
