修改显示项目包名，加入多数据源的配置，加入主从数据源配置

--- a/swak-jdbc/pom.xml
+++ b/swak-jdbc/pom.xml
@@ -108,5 +108,10 @@
 			<artifactId>guava</artifactId>
 			<version>${guava.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${aspectjweaver.version}</version>
+		</dependency>
 	</dependencies>
 </project>
