--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 		<spring.version>5.2.5.RELEASE</spring.version>
 		<cglib.version>3.3.0</cglib.version>
 		<javassist.version>3.27.0-GA</javassist.version>
+		<aspectjweaver.version>1.9.5</aspectjweaver.version>
 		<fastjson.version>1.2.68</fastjson.version>
 		<logback.version>1.2.3</logback.version>
 		<slf4j.version>1.7.30</slf4j.version>
