--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<module>swak-jdbc-async</module>
 		<module>swak-lib</module>
 		<module>swak-generate</module>
+		<module>swak-jcef</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.2.6.RELEASE</spring-boot.version>
@@ -79,6 +80,7 @@
 		<rabbitmq.version>5.8.0</rabbitmq.version>
 		<rocketmq.version>4.7.0</rocketmq.version>
 		<lombok.version>1.18.12</lombok.version>
+		<jcef.version>0.4.0-online</jcef.version>
 
 		<!-- test -->
 		<junit.version>4.13</junit.version>
