--- a/pom.xml
+++ b/pom.xml
@@ -75,22 +75,15 @@
 		<jcef.version>1.0</jcef.version>
 		<poi.version>4.1.2</poi.version>
 		<guava.version>21.0</guava.version>
-<<<<<<< HEAD
 		<controlsfx.version>11.0.1</controlsfx.version>
-		<javafx.version>13.0.2</javafx.version>
-		<freemarker.version>2.3.29</freemarker.version>
-		<rabbitmq.version>5.7.3</rabbitmq.version>
-		<rocketmq.version>4.5.1</rocketmq.version>
-		<lombok.version>1.18.8</lombok.version>
-		<jaxb.version>2.4.0-b180830.0438</jaxb.version>
-=======
-		<controlsfx.version>8.40.16</controlsfx.version>
 		<freemarker.version>2.3.30</freemarker.version>
 		<rabbitmq.version>5.8.0</rabbitmq.version>
 		<rocketmq.version>4.7.0</rocketmq.version>
 		<lombok.version>1.18.12</lombok.version>
 		<jcef.version>0.4.0-online</jcef.version>
->>>>>>> refs/remotes/origin/master
+		<javafx.version>13.0.2</javafx.version>
+		<jaxb.version>2.4.0-b180830.0438</jaxb.version>
+		<javax.annotation.version>1.3.2</javax.annotation.version>
 
 		<!-- test -->
 		<junit.version>4.13</junit.version>
@@ -310,10 +303,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-<<<<<<< HEAD
-=======
 				<version>${maven-surefire-plugin}</version>
->>>>>>> refs/remotes/origin/master
 				<configuration>
 					<skipTests>true</skipTests>
 				</configuration>
@@ -321,10 +311,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-<<<<<<< HEAD
-=======
 				<version>${maven-source-plugin}</version>
->>>>>>> refs/remotes/origin/master
 				<executions>
 					<execution>
 						<id>attach-sources</id>
