--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<module>swak-jdbc-async</module>
 		<module>swak-lib</module>
 		<module>swak-generate</module>
+		<module>swak-fetty</module>
 	</modules>
 	<properties>
 		<spring-boot.version>2.2.6.RELEASE</spring-boot.version>
