--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
 		<!-- db driver -->
 		<sharding.version>3.0.0</sharding.version>
 		<mysql-jdbc.version>8.0.19</mysql-jdbc.version>
+		<mssql-jdbc.version>7.4.1.jre8</mssql-jdbc.version>
 		<h2-jdbc.version>1.4.200</h2-jdbc.version>
 		<sqlite-jdbc.version>3.30.1</sqlite-jdbc.version>
 		<mongodb.version>3.12.2</mongodb.version>
