--- a/swak-jdbc/pom.xml
+++ b/swak-jdbc/pom.xml
@@ -113,5 +113,10 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>${aspectjweaver.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>${mssql-jdbc.version}</version>
+		</dependency>
 	</dependencies>
 </project>
