代码生成工具

--- a/swak-tools/pom.xml
+++ b/swak-tools/pom.xml
@@ -34,6 +34,10 @@
 			<version>${mssql-jdbc.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.swak</groupId>
+			<artifactId>swak-template</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
